feat: limit game to 5 points

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
+    <p class="score">You: 0 vs Computer: 0</p>
     <button id="rock">Rock</button>
     <button id="paper">Paper</button>
     <button id="scissors">Scissors</button>
     <div class="display"></div>
+    <div class="overall-winner"></div>
 </body>
 </html>
